--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Branch pratice</title>
 </head>
 <body>
-    <h1> Hello To Master branch!</h1>
+    <h1 style="background-color:red;"> Hello To Master branch!</h1>
 </body>
 </html>
