--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
    
 
-    <h1 style="background-color:red;"> Hello To Master branch!</h1>
+    <h1 style="background-color:red;"> Hello To CSS branch!</h1>
+    <h2>Add new feature</h2>
 
 </body>
 </html>
